@@ -1,3 +1,9 @@
+2002-09-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* lily/include/event-chord-iterator.hh,
+	lily/context-specced-music-iterator.cc,
+	lily/event.cc, lily/event-chord-iterator.cc: add
+
 2002-09-29  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 
